--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
-    "mongoose": "^5.2.14",
+    "mongoose": "^5.2.15",
     "npm": "^6.4.1",
     "request": "^2.88.0"
-  }
+  },
+  "devDependencies": {}
 }
